<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:padding="18dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTask"
        style="@style/button_dialog"
        android:minHeight="48dp" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            style="@style/radio_button_dialog_todo"
            android:buttonTint="@color/LightGreen"
            android:checked="true"
            android:text="@string/task_negocios" />

        <RadioButton
            android:id="@+id/rbPersonal"
            style="@style/radio_button_dialog_todo"
            android:buttonTint="@color/orange"
            android:text="@string/task_personal" />

        <RadioButton
            android:id="@+id/rbOther"
            style="@style/radio_button_dialog_todo"
            android:buttonTint="@color/GreenYellow"
            android:text="@string/task_otros" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_task"
        android:backgroundTint="@color/Purple"/>

</LinearLayout>