<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/article_title"
    android:paddingHorizontal="32dp"
    android:paddingVertical="16dp"
    tools:context=".ResultIMCActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/result"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="32dp"
        android:backgroundTint="@color/MidnightBlue"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btnReCalcule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="Normal">

            </TextView>

            <TextView
                android:id="@+id/tvIMC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="100dp"
                android:text="@string/Weight"
                android:textColor="@color/white"
                android:textSize="80sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Weight"
                android:textColor="@color/white"
                android:textSize="30sp">

            </TextView>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReCalcule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/MediumBlue"
        android:padding="10dp"
        android:text="@string/re_calcule"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>