<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Opciones"
            android:textFontWeight="@integer/material_motion_duration_long_1"
            android:textColor="@color/title_mode_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="end"
            android:src="@drawable/ic_more_vert"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="332dp"
            tools:layout_editor_absoluteY="6dp" />

    </Toolbar>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:shadowColor="@color/DarkSlateGray"
        android:text="@string/btn_func_saludar"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnIMCApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnIMCApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:orientation="vertical"
        android:text="@string/calcula_imc"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnToDoApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToDoApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:orientation="vertical"
        android:text="@string/btn_to_do_app"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSuperHero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIMCApp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSuperHero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:orientation="vertical"
        android:text="Super Hero"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLeerPoemas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnToDoApp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLeerPoemas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:orientation="vertical"
        android:text="Leer Poemas"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSuperHero" />

    <View
        android:id="@+id/viewblue"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@android:color/holo_blue_dark"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>