<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/articlecolor"
    android:paddingHorizontal="18dp"
    android:paddingVertical="16dp"
    tools:context=".ImcActivity">

    <TextView
        android:id="@+id/tvIntoHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/title_imc"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMen"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/MidnightBlue"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/cvWomen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIntoHeight">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="85dp"
                android:src="@drawable/ic_male"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWomen"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/MidnightBlue"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvMen"
        app:layout_constraintTop_toBottomOf="@id/tvIntoHeight">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="85dp"
                android:src="@drawable/ic_female"
                app:tint="@color/white"
                tools:ignore="ContentDescription">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/height"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginTop="18dp"
        app:cardBackgroundColor="@color/MidnightBlue"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvMen">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/height"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15dp"
                tools:ignore="SpUsage,TextSizeCheck" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="120 cm"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200"
                app:haloColor="@color/MediumBlue"
                app:thumbColor="@color/MediumBlue"
                app:tickColor="@color/black"
                app:tickVisible="@color/MediumBlue"
                app:trackColorActive="@color/DodgerBlue"
                app:trackColorInactive="@color/LemonChiffon"
                tools:ignore="SpeakableTextPresentCheck,VisualLintBounds" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/weight"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="9dp"
        app:cardBackgroundColor="@color/MidnightBlue"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Weight"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:text="60">

            </TextView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubstractWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_subtract"
                    app:backgroundTint="@color/MediumBlue"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck,SpeakableTextPresentCheck">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus"
                    app:backgroundTint="@color/MediumBlue"
                    app:maxImageSize="45dp"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="18dp"
        app:cardBackgroundColor="@color/MidnightBlue"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weight"
        app:layout_constraintTop_toBottomOf="@id/height">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:text="60">

            </TextView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubstractAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_subtract"
                    app:backgroundTint="@color/MediumBlue"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_plus"
                    app:backgroundTint="@color/MediumBlue"
                    app:maxImageSize="45dp"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalcule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/MediumBlue"
        android:padding="10dp"
        android:text="@string/calcule"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

    <View
        android:id="@+id/viewblue"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:background="@android:color/holo_blue_dark"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>